fix: #1057 add align design header (#1153)
* fix: #1057 add align design header

* fix: #1057 add local var to header

* fix: #1057 fixed header styles

* fix: #1057 fixed header style

* feat: #1057 add new variable to gap

* fix: #1057 removedgap variable

* feat: #1057 add style to header

--- a/mw-webapp/src/component/header/Header.module.scss
+++ b/mw-webapp/src/component/header/Header.module.scss
@@ -1,6 +1,10 @@
 @import "src/styles/variables";
 
-$userNameFontSize: 16px;
+$burgerMenuSize: 24px;
+$logoSidebarHeight: 40px;
+$googleIconSize: 20px;
+$loginImageMaxWidth: 457px;
+$loginModalMaxWidth: 914px;
 
 .header {
   display: flex;
@@ -13,29 +17,28 @@ $userNameFontSize: 16px;
   margin: 0 auto;
 }
 
-.logo {
-  height: 55px;
-}
-
 .logoSidebar {
-  height: 40px;
+  height: logoSidebarHeight;
 }
 
 .headerButtonsContainer {
-  display: flex;
-  width: auto;
   align-items: center;
   justify-content: space-between;
-  gap: $gapMedium;
+  gap: $gapExtraExtraLarge;
 }
 
 .logo {
   cursor: pointer;
 }
 
-.rightBlock {
+.headerThemeLanguageBlock {
+  gap: $gapBig;
   align-items: center;
-  gap: $gapMedium;
+}
+
+.headerSidebarBlock {
+  gap: $gapExtraBig;
+  align-items: center;
 }
 
 .userAvatar {
@@ -43,11 +46,11 @@ $userNameFontSize: 16px;
 }
 
 .burgerMenu {
-  width: 24px;
-  height: 24px;
+  width: $burgerMenuSize;
+  height: $burgerMenuSize;
   margin-top: 2px;
   cursor: pointer;
-  fill: var(--primaryTextColor);
+  fill: var(--primaryIconColor);
 }
 
 .sidebarItem {
@@ -75,7 +78,7 @@ $userNameFontSize: 16px;
 }
 
 .socialMediaIcon {
-  border: 2px solid var(--secondaryStrokeColor);
+  border: $primaryBorder solid var(--secondaryStrokeColor);
   border-radius: $tertiaryBorderRadius;
   background-color: var(--secondaryIconBgColor);
   fill: var(--quaternaryBgColor);
@@ -96,7 +99,7 @@ $userNameFontSize: 16px;
 .loginModal {
   overflow: hidden;
   width: 90%;
-  max-width: 914px;
+  max-width: $loginModalMaxWidth;
   padding: 0;
   border: none;
   gap: 0;
@@ -108,7 +111,7 @@ $userNameFontSize: 16px;
 
 .loginImage {
   width: 100%;
-  max-width: 457px;
+  max-width: $loginImageMaxWidth;
 
   @media (max-width: $mediaWidthTablet) {
     display: none;
@@ -127,8 +130,8 @@ $userNameFontSize: 16px;
 }
 
 .googleIcon {
-  width: 20px;
-  height: 20px;
+  width: $googleIconSize;
+  height: $googleIconSize;
 }
 
 .loginButtons {
@@ -140,7 +143,7 @@ $userNameFontSize: 16px;
   display: flex;
   justify-content: center;
   padding: $paddingMedium $paddingExtraBig;
-  border: 1px solid var(--primaryStrokeColor);
+  border: $primaryBorder solid var(--primaryStrokeColor);
   border-radius: $secondaryBorderRadius;
   text-decoration: none;
 }
